@@ -1,0 +1,76 @@
+/* 
+ * PiTiVi
+ * Copyright (C) <2004> Edward G. Hervey <hervey_e@epita.fr>
+ *                      Guillaume Casanova <casano_g@epita.fr>
+ *
+ * This software has been written in EPITECH <http://www.epitech.net>
+ * EPITECH is a computer science school in Paris - FRANCE -
+ * under the direction of Flavien Astraud and Jerome Landrieu.
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this program; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+
+#ifndef PITIVI_SETTINGSWINDOW_H
+#define PITIVI_SETTINGSWINDOW_H
+
+typedef struct _PitiviSettingsWindow PitiviSettingsWindow;
+
+/*
+ * Potentially, include other headers on which this header depends.
+ */
+
+#include "pitivi-windows.h"
+
+/*
+ * Type macros.
+ */
+
+#define PITIVI_SETTINGSWINDOW_TYPE (pitivi_settingswindow_get_type ())
+#define PITIVI_SETTINGSWINDOW(obj) (G_TYPE_CHECK_INSTANCE_CAST ((obj), PITIVI_SETTINGSWINDOW_TYPE, PitiviSettingsWindow))
+#define PITIVI_SETTINGSWINDOW_CLASS(klass) (G_TYPE_CHECK_CLASS_CAST ((klass), PITIVI_SETTINGSWINDOW_TYPE, PitiviSettingsWindowClass))
+#define PITIVI_IS_SETTINGSWINDOW(obj) (G_TYPE_CHECK_TYPE ((obj), PITIVI_SETTINGSWINDOW_TYPE))
+#define PITIVI_IS_SETTINGSWINDOW_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), PITIVI_SETTINGSWINDOW_TYPE))
+#define PITIVI_SETTINGSWINDOW_GET_CLASS(obj) (G_TYPE_INSTANCE_GET_CLASS ((obj), PITIVI_SETTINGSWINDOW_TYPE, PitiviSettingsWindowClass))
+
+typedef struct _PitiviSettingsWindowClass PitiviSettingsWindowClass;
+typedef struct _PitiviSettingsWindowPrivate PitiviSettingsWindowPrivate;
+
+struct _PitiviSettingsWindow
+{
+  PitiviWindows parent;
+
+  /* instance public members */
+
+  /* private */
+  PitiviSettingsWindowPrivate *private;
+};
+
+struct _PitiviSettingsWindowClass
+{
+  PitiviWindowsClass parent;
+  /* class members */
+};
+
+/* used by PITIVI_SETTINGSWINDOW_TYPE */
+GType pitivi_settingswindow_get_type (void);
+
+/*
+ * Method definitions.
+ */
+
+PitiviSettingsWindow	*pitivi_settingswindow_new(PitiviMainApp *mainapp);
+
+#endif
