@@ -1,3 +1,12 @@
+2004-06-26    <bilboed@localhost>
+
+	* src/pitivi-settingswindow.c: 
+	* src/pitivi-settingswindow.h: Created PitiviSettingsWindow, a PitiviWindows
+
+	* src/pitivi-projectsettingswindow.c: 
+	* src/pitivi-projectsettingswindow.h: Created PitiviProjectSettingsWindow, a PitiviProjectWindows
+	
+
 2004-06-26    <bilboed@rider.bilboed.homelinux.org>
 
 	* src/pitivi-timelinewindow.c (pitivi_timelinewindow_get_type):
